# Hackathon

./: .gitignore  UI.py  chat_log.json  llm.py  main.py  pyproject.toml  requirements.txt  run_app.py  summarize_chat.py
backend/: backend.txt  summarize_chat.py
frontend/: UI.py  add_reminder_to_google_calender.py  save_load.py
group_chat_ver/: .gitignore  pyproject.toml
group_chat_ver/src/hackathon_app/backend/: app.py  database.py  main.py
group_chat_ver/src/hackathon_app/backend/calendar/: setup_google_calendar.py
group_chat_ver/src/hackathon_app/backend/routers/: calendar.py  chat.py  minutes_events.py  room.py  user.py
group_chat_ver/src/hackathon_app/backend/summarize_answer/: answer_chat.py  call_ai_model.py  summarize_chat.py
group_chat_ver/src/hackathon_app/prompts/: minutes_events.txt
prompts/: minutes_events.txt  summarize.txt
src/hackathon_app/: main.py
src/hackathon_app/backend/: app.db  app.py  database.py  main.py
src/hackathon_app/backend/calendar/: add_reminder_to_google_calender.py  setup_google_calendar.py
src/hackathon_app/backend/routers/: calendar.py  chat.py  messages.py  minutes_events.py  room.py  rooms.py
src/hackathon_app/backend/summarize/: summarize_chat.py
src/hackathon_app/backend/summarize_answer/: answer_chat.py  call_ai_model.py  hf_token_settings.py  summarize_chat.py
src/hackathon_app/frontend/: UI.py
src/hackathon_app/frontend/ui/: main.py  ui_calendar.py  ui_edit.py  ui_rendering_typing.py  ui_rooms.py  ui_settings.py
tests/: test_UI.py  test_calendar.py  test_edit_messages.py  test_summarize.py
(+6 files in other folders)
